2014-03-02  Ian Dunn  <dunni@gnu.org>

	* configure.ac: Moved configure check for pkg-config to just
	before actual package checks.

	* sexpr-process-equiv.c: Added defines for recurse_mode modes.
	(recurse_mode): Implemented mode definitions.
	(proc_id): Same.
	(proc_co): Same.

	* sexpr-process.c (sexpr_get_generalities): Clear out vector after finding
	invalid connective.
	(sexpr_car): Removed.
	(sexpr_cdr): Removed.
	(sexpr_car_cdr): Added comments.
	(sexpr_str_car_cdr): Same.
	(construct_other): Same.

	* process.h (IS_SBIN_CONN): Checks whether a string is a
	binary sexpr connective.

	* vec.c (vec_str_clear): Added.

2014-03-01  Ian Dunn  <dunni@gnu.org>

	* aio.h (VER_TAG): Added for versioning files.
	(FILE_VER): Set to 1.0.

	* aio.c (aio_save): Added version number to file format.
	(aio_open): Same.

	* conf-file.h (main_menu_conf): Changed export label to
	'Export to LaTeX...'.

	* sentence.c (sentence_init): Added rules box identifier for
	subproofs.

	* aris-proof.c (aris_proof_post_init): Replaced the separator.
	(aris_proof_create_sentence): Ignores new_order parameter of
	sen_parent_ins_sentence.
	(aris_proof_init_from_proof): Replaced the separator.
	(aris_proof_end_sub): Prevents a subproof from being cut in
	half.
	(aris_proof_to_latex): Checks for a valid filename before
	exporting.

	* sen-parent.c (sen_parent_ins_sentence): Accounts for the
	separator in proofs.

2014-02-28  Ian Dunn  <dunni@gnu.org>

	* pound.h (INIT_FONT): Changed font type to
	'DejaVu Sans Mono'.

	* vec.c: Implemented error codes.

	* undo.h (undo_sen): Removed.
	(UNDO_OP): Removed.
	(UNDO_INFO_TYPE): Removed UIT_ADD_GOAL and UIT_REM_GOAL.

	* undo.c (undo_determine_op): Added comments.
	(undo_op_remove): Same.
	(undo_op_add): Same.
	(undo_op_mod): Same.

	* sen-parent.c (sen_parent_rem_sentence): Removed unneeded
	comments.
	Replaced call to gtk_grid_remove_row.
	Removed it again, might replace it when 3.10 hits mainstream.