@@ -17,7 +17,6 @@
 
 
 bin_PROGRAMS = aris
-#test
 
 AM_CFLAGS = $(CFLAGS) $(GTK_CFLAGS) $(XML_CFLAGS)
 AM_CFLAGS += -DARIS_GUI
@@ -49,101 +48,53 @@ XPM_SOURCES = \
 
 aris_SOURCES = $(XPM_SOURCES)
 
-aris_SOURCES +=		\
-	aio.h		\
-	aio.c		\
-	app.h		\
-	app.c		\
-	aris-proof.h	\
-	aris-proof.c	\
-	callbacks.h	\
-	callbacks.c	\
-	conf-file.h	\
-	conf-file.c	\
-	goal.h		\
-	goal.c		\
-	interop-isar.h	\
-	interop-isar.c	\
-	list.h 		\
-	list.c		\
-	menu.h		\
-	menu.c		\
-	pound.h		\
-	process.h	\
-	process.c	\
-	process-main.c	\
-	proof.h		\
-	proof.c		\
-	rules.h		\
-	rules-table.h	\
-	rules-table.c	\
-	sen-data.h	\
-	sen-data.c	\
-	sen-parent.h	\
-	sen-parent.c	\
-	sentence.h	\
-	sentence.c	\
-	sexpr-process.h	\
-	sexpr-process.c	\
-	sexpr-process-bool.c  \
+aris_SOURCES +=			\
+	aio.h			\
+	aio.c			\
+	app.h			\
+	app.c			\
+	aris-proof.h		\
+	aris-proof.c		\
+	callbacks.h		\
+	callbacks.c		\
+	conf-file.h		\
+	conf-file.c		\
+	goal.h			\
+	goal.c			\
+	interop-isar.h		\
+	interop-isar.c		\
+	list.h 			\
+	list.c			\
+	menu.h			\
+	menu.c			\
+	pound.h			\
+	process.h		\
+	process.c		\
+	process-main.c		\
+	proof.h			\
+	proof.c			\
+	rules.h			\
+	rules-table.h		\
+	rules-table.c		\
+	sen-data.h		\
+	sen-data.c		\
+	sen-parent.h		\
+	sen-parent.c		\
+	sentence.h		\
+	sentence.c		\
+	sexpr-process.h		\
+	sexpr-process.c		\
+	sexpr-process-bool.c  	\
 	sexpr-process-equiv.c	\
 	sexpr-process-infer.c	\
-	sexpr-process-misc.c  \
+	sexpr-process-misc.c  	\
 	sexpr-process-quant.c	\
-	typedef.h	\
-	undo.c		\
-	undo.h		\
-	var.h 		\
-	var.c		\
-	vec.h		\
+	typedef.h		\
+	undo.c			\
+	undo.h			\
+	var.h 			\
+	var.c			\
+	vec.h			\
 	vec.c
 
-# test_SOURCES = $(XPM_SOURCES)
-
-# test_SOURCES +=		\
-# 	aio.h		\
-# 	aio.c		\
-# 	app.h		\
-# 	app.c		\
-# 	aris-proof.h	\
-# 	aris-proof.c	\
-# 	callbacks.h	\
-# 	callbacks.c	\
-# 	conf-file.h	\
-# 	conf-file.c	\
-# 	goal.h		\
-# 	goal.c		\
-# 	interop-isar.h	\
-# 	interop-isar.c	\
-# 	list.h 		\
-# 	list.c		\
-# 	menu.h		\
-# 	menu.c		\
-# 	process.h	\
-# 	process.c	\
-# 	process-main.c	\
-# 	proof.h		\
-# 	proof.c		\
-# 	rules.h		\
-# 	rules-table.h	\
-# 	rules-table.c	\
-# 	sen-data.h	\
-# 	sen-data.c	\
-# 	sen-parent.h	\
-# 	sen-parent.c	\
-# 	sentence.h	\
-# 	sentence.c	\
-# 	sexpr-process.h	\
-# 	sexpr-process.c	\
-# 	sexpr-process-bool.c  \
-# 	sexpr-process-equiv.c	\
-# 	sexpr-process-infer.c	\
-# 	sexpr-process-misc.c  \
-# 	sexpr-process-quant.c	\
-# 	var.h 		\
-# 	var.c		\
-# 	vec.h		\
-# 	vec.c
-
-#test_SOURCES += test.c
 aris_SOURCES += aris.c
